Add conference info

--- a/development.qmd
+++ b/development.qmd
@@ -13,3 +13,43 @@ Training Request Forms are required for all trainings, even Water Boards Academy
 ## Conferences
 
 Attending conferences can help staff practice and develop their public speaking skills as well as provide opportunities to network and find and develop new partnerships (or nurture existing ones!). Being able to attend conferences requires lots of planning and paperwork, so it's a great idea to think about which conference(s) you might request to attend during your IDP process, and be ready to submit all of the required paperwork well in advance. See the [Training Section](https://cawaterboarddatacenter.github.io/swamp-manual/training.html) of this Manual for more details.
+
+See the table below for a list of conferences that may be of interest and usually have intersection with SWAMP and broader OIMA priorities.
+
++-----------------------------------------------------------------------------------------+-------------+--------------+
+| Conference Name                                                                         | Time Frame  | Frequency    |
++=========================================================================================+=============+==============+
+| [American Society of Limnology and Oceanography](https://www.aslo.org/meetings/) (ASLO) | Feb/Mar     | Twice a year |
+|                                                                                         |             |              |
+| (Includes the Ocean Sciences Meeting & Aquatic Sciences Meeting)                        | May/Jun     |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+| [Women in Data Science](https://www.widsconference.org/conference.html)                 | Mar         | Annual       |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+| [Salmonid Restoration Federation](https://www.calsalmon.org/conferences)                | Mar/Apr     | Annual       |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+| [Code for America Summit](https://summit.codeforamerica.org/)                           | Mar-May     | Annual       |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+| [Society for Freshwater Science (SFS)](https://freshwater-science.org/events)           | May/Jun     | Annual       |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
+|                                                                                         |             |              |
++-----------------------------------------------------------------------------------------+-------------+--------------+
