Add conferences to list

--- a/development.qmd
+++ b/development.qmd
@@ -16,40 +16,42 @@ Attending conferences can help staff practice and develop their public speaking 
 
 See the table below for a list of conferences that may be of interest and usually have intersection with SWAMP and broader OIMA priorities.
 
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-| Conference Name                                                                         | Time Frame  | Frequency    |
-+=========================================================================================+=============+==============+
-| [American Society of Limnology and Oceanography](https://www.aslo.org/meetings/) (ASLO) | Feb/Mar     | Twice a year |
-|                                                                                         |             |              |
-| (Includes the Ocean Sciences Meeting & Aquatic Sciences Meeting)                        | May/Jun     |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-| [Women in Data Science](https://www.widsconference.org/conference.html)                 | Mar         | Annual       |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-| [Salmonid Restoration Federation](https://www.calsalmon.org/conferences)                | Mar/Apr     | Annual       |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-| [Code for America Summit](https://summit.codeforamerica.org/)                           | Mar-May     | Annual       |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-| [Society for Freshwater Science (SFS)](https://freshwater-science.org/events)           | May/Jun     | Annual       |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
-|                                                                                         |             |              |
-+-----------------------------------------------------------------------------------------+-------------+--------------+
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| Conference Name                                                                                                           | Time Frame | Frequency    |
++===========================================================================================================================+============+==============+
+| [American Society of Limnology and Oceanography](https://www.aslo.org/meetings/) (ASLO)                                   | Feb/Mar    | Twice a year |
+|                                                                                                                           |            |              |
+| (Includes the Ocean Sciences Meeting & Aquatic Sciences Meeting)                                                          | May/Jun    |              |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [Women in Data Science](https://www.widsconference.org/conference.html) (WiDS)                                            | Mar        | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [Salmonid Restoration Federation](https://www.calsalmon.org/conferences) (SRF)                                            | Mar/Apr    | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [Code for America Summit](https://summit.codeforamerica.org/)                                                             | Mar-May    | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [National Water Quality Monitoring Council](https://www.epa.gov/awma/national-water-quality-monitoring-council) (NWQMC)   | Apr        | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [Society for Freshwater Science](https://freshwater-science.org/events) (SFS)                                             | May/Jun    | Annual       |
+|                                                                                                                           |            |              |
+| Also check out the [California Chapter](https://freshwater-science.org/my-sfs/chapters/california) (CalSFS)               |            |              |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [California Data Collaborative Water Data Summit](https://www.cawaterdatasummit.org/)                                     | Aug/Sep    | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [California Lake Management Society](https://www.california-lakes.org/calms-conference) (CALMS)                           | Oct        | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [Society for Open, Reliable, and Transparent Ecology and Evolutionary Biology](https://www.sortee.org/upcoming/) (SORTEE) | Oct        | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [Tribal EPA & U.S. EPA Region 9 Annual Conference](https://tribalepa.com/)                                                | Oct        | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [North American Lake Management Society](https://www.nalms.org/nalms-symposia/) (NALMS)                                   | Nov        | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [Society of Environmental Toxicology and Chemistry](https://www.setac.org/page/MeetingsandEvents) (SETAC)                 | Nov        | Annual       |
+|                                                                                                                           |            |              |
+| Also check out [Northern California Regional Chapter](https://www.norcalsetac.com/events.html) (NorCal SETAC)             |            |              |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [​American Geophysical Union](https://www.agu.org/Plan-for-a-Meeting/AGUMeetings) (AGU)                                    | Dec        | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [​American Fisheries Society](https://fisheries.org/events/) (AFS)                                                         | Variable   | Annual       |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
+| [National Forum on Contaminants in Fish](https://www.epa.gov/fish-tech/national-forum-contaminants-fish) (Fish Forum)     | Variable   | Variable     |
++---------------------------------------------------------------------------------------------------------------------------+------------+--------------+
