--- a/onboarding.qmd
+++ b/onboarding.qmd
@@ -6,15 +6,7 @@ Also see the [New Employee Orientation Resources](https://waternet.waterboards.c
 
 ## HR forms
 
-On your starting day, you will receive a package of forms and documents from the HR department including:
-
--   Your duty statement
--   Tax forms
--   Direct deposit forms
--   Questionaires (diversity, military)
--   CalPERS forms
--   Leave forms
--   Medical insurance forms
+On your starting day, you will receive a package of forms and documents from the HR department including your duty statement, tax forms, direct deposit forms, questionaires (diversity, military), CalPERS forms, leave forms, and medical insurance forms
 
 You will also be asked to submit a photocopy of either your passport or a combination of your driver's license and social security card to the HR representative (currently Alicyn Chappelle). All forms apart from the medical insurance forms must be submitted within the first couple of days. Medical insurance forms must be submitted within the first 60 days for you to qualify for enrollment; however, the sooner you submit these forms the sooner you will have health coverage.
 
@@ -36,7 +28,9 @@ When onboarded, employees in most classifications will be able to select a leave
 Important FAQ for leave types:
 
 -   You are only allowed to switch leave types every 2 years. Check with our HR liaison about switching leave types.
+
 -   Leave types are also connected to different types of non-work-related disability leave, which may impact your income should you need to go on disability leave. Non-work-related disability leave types are compared for Unit 10 employees on this [flyer](https://capsscientists.org/wp-content/uploads/2018/02/Facts-about-ENDI.pdf). More information about non-work-related disability leave is also available on the EDD [website](https://edd.ca.gov/).
+
 -   Leave accrual can be impacted by the number of days/hours you work in a month.
 
 ::: callout-tip
@@ -70,58 +64,47 @@ To learn more about the health coverage available to you, please visit the CalPE
 
 ## Timesheets & Pay
 
-Staff should complete and submit their timesheets by the 25th of each month.
+Staff should complete and submit their timesheets by the 25th of each month. Direct deposit typically hits the last day of the pay period (end of the month), potentially earlier if you use a credit union like Golden 1.
 
 It typically takes \~1 month for new staff to be entered in the electronic timesheet system (BizFlow), so the first timesheet is done by filling out an excel template.
 
-### BizFlow eTimesheets
+### Bizflow: Timesheets
 
-[Instructions on how to use BizFlow](https://waternet.waterboards.ca.gov/das/human_resources/docs/BizFlow_Gen_Instructions_15Jul2022.pdf) (Water Board intranet site requires VPN login).
+**Logging in**: To [login](https://ework.waterboards.ca.gov/bizflow/index.jsp?v=_5FtHCSz6JfUxrK7) you must use MS Edge browser and be connected to VPN (or on the network at CalEPA building). Use your workstation username (waterboards email address) and password to login.
 
--   The menu provides several options -- go to eTimesheet tab, then eTimesheet Process, then click on Current eTimesheet to begin
+**eTimesheets**: From the menu, -- click the eTimesheet tab --\> eTimesheet Process --\> Current eTimesheet to begin. Select the pay period (month) to load a timesheet. All work hours must be associated with a Task ID -- your supervisor will provide this, and it will be saved on all future timesheets. Work hours go on page 1, leave hours go on page 2. Use the \> and \< symbols on the timesheet to navigate between pages. Make sure your total hours fit the expected hours at the bottom of the timesheet, both monthly and daily, unless otherwise directed by your supervisor. Once complete, sign the 1st page of the timesheet, change status in the upper left corner to "Submit to Supervisor", and click the green check box to complete the process.
 
-[BizFlow Login](https://ework.waterboards.ca.gov/bizflow/index.jsp?v=_5FtHCSz6JfUxrK7)
+**BizFlow Tips**
 
--   To login you must use MS Edge browser and be connected to VPN (or on the network at CalEPA building)
--   Use your workstation username (waterboards email address) and password to login
-
-BizFlow Tips
-
+-   For first-time users and info on how to change your settings, see [Instructions on how to use BizFlow](https://waternet.waterboards.ca.gov/das/human_resources/docs/BizFlow_Gen_Instructions_15Jul2022.pdf) (intranet site; requires VPN login)
 -   [Check out the FAQs](https://waternet.waterboards.ca.gov/das/human_resources/docs/BizFlow_FAQs.pdf)
--   Your supervisor will provide the Task ID, which will be saved on all future timesheets
--   Work hours go on page 1, days off go on page 2
--   Most leave types can't be used the first month, except Professional Development Days
--   Don't forget to change the status to "Submit to Supervisor" in upper left corner before clicking green check box to complete the process
 
 ### Electronic Paystubs
 
-Direct deposit should show up the last day of the pay period (end of the month)
+You can view and download your paystubs from the [Cal Employee Connect portal](https://connect.sco.ca.gov/). Your supervisor will request login information for you from HR (personnel specialist) after your first paycheck.
 
-You can view and download your paystubs from the [Cal Employee Connect portal](https://connect.sco.ca.gov/)
-
--   Your supervisor will request login information for you from HR (personnel specialist) after your first paycheck
-
+::: callout-tip
 Leave balances are included on your paystubs and can be tracked in Cal Employee Connect, but they are always a month (or more) behind. You may want to track them in real-time in your own spreadsheet.
+:::
 
 ## Office-centered and Remote-centered Work
-
-The Telework Policy for CalEPA and the Water Boards allows remote-centered work options for all staff as long as business needs can be met.
-
-As of January 2023, OIMA still maintains enough office space that staff will be assigned a cubicle or personal workstation in the CalEPA building whether or not they primarily work remotely.
-
-### Work Week Agreement and Telework Plan
 
 All staff are required to fill out a work week agreement and telework plan that specifies where you will typically work on a given day of the week (office or remote) and your typical work hours. These plans must be completed even if the employee works in the office full time.
 
 Your typical work schedule (Work Week Agreement) and Telework Plan need to be created in BizFlow within 2 months of starting work.
 
-In BizFlow, select Employee Self-Service from the menu, then click on Work Week Agreement/Telework Request to complete this process.
+The Telework Policy for CalEPA and the Water Boards allows remote-centered work options for all staff as long as business needs can be met. As of January 2023, OIMA still maintains enough office space that staff will be assigned a cubicle or personal workstation in the CalEPA building whether or not they primarily work remotely.
 
-## Equipment
+### Bizflow: Telework Agreement
 
--   The Water Boards only uses PCs and does not generally support any Mac-based hardware.
--   All staff are assigned a laptop (typically Dell or HP) that they can use at home and the office.
--   The office workstation is set up with two wide screen monitors, keyboard, mouse and docking station where you plug in your laptop.
--   Equipment available to take home includes: laptop, laptop bag, standard monitor, keyboard, mouse, headset, adjustable monitor stand, adjustable tilting laptop stand.
--   To request additional equipment or to report issues with any of your equipment, send an email to the [IT Help Desk](mailto:help@waterboards.ca.gov). This will log a ticket in their tracking system and they will respond typically the same day.
--   Ergonomic equipment may be made available through a [Reasonable Accommodation Request](https://waternet.waterboards.ca.gov/eeo/reasonable/index.shtml) (intranet link requires VPN login). Work with your supervisor for guidance on preparing the request.
+**Logging in**: To [login](https://ework.waterboards.ca.gov/bizflow/index.jsp?v=_5FtHCSz6JfUxrK7) you must use MS Edge browser and be connected to VPN (or on the network at CalEPA building). Use your workstation username (waterboards email address) and password to login.
+
+### Bizflow: Work Week Agreement
+
+**Logging in**: To [login](https://ework.waterboards.ca.gov/bizflow/index.jsp?v=_5FtHCSz6JfUxrK7) you must use MS Edge browser and be connected to VPN (or on the network at CalEPA building). Use your workstation username (waterboards email address) and password to login.
+
+### Telework Equipment
+
+All staff are assigned a laptop (typically Dell or HP) that they can use at home and the office. The Water Boards only uses PCs and does not generally support any Mac-based hardware. Office workstations are set up with two wide screen monitors, keyboard, mouse and docking station where you plug in your laptop.
+
+Equipment available to take home includes: laptop, laptop bag, standard monitor, keyboard, mouse, headset, adjustable monitor stand, adjustable tilting laptop stand. To request additional equipment or to report issues with any of your equipment, send an email to the [IT Help Desk](mailto:help@waterboards.ca.gov). This will log a ticket in their tracking system and they will respond typically the same day. Ergonomic equipment may be made available through a [Reasonable Accommodation Request](https://waternet.waterboards.ca.gov/eeo/reasonable/index.shtml) (intranet link requires VPN login). Work with your supervisor for guidance on preparing the request.
