--- a/expectations.qmd
+++ b/expectations.qmd
@@ -34,6 +34,8 @@ Reminder to add norms regarding when to use email vs. Teams chat vs. Phone call 
 
 ![Four our inspiration - need to review, discuss as a team and revise for SWAMP needs](https://mmheadlines.org/wp-content/uploads/2022/03/Communication-Channel-Use-Norm-Chart.pdf)
 
+![Four our inspiration - need to review, discuss as a team and revise for SWAMP needs](https://mmheadlines.org/wp-content/uploads/2022/03/Communication-Channel-Use-Norm-Chart.pdf){width="80%"}
+
 Anna Note: Recommend adding a row for co-working meetings and separating that from formal meetings (which is represented in the chat already)
 
 ## Expectations of supervisors
