--- a/lifecycle.qmd
+++ b/lifecycle.qmd
@@ -4,19 +4,19 @@ All SWAMP activities align with some component of the [data life cycle](https://
 
 ## Plan and Prepare
 
-The SWAMP Team, and all of the individuals within it, tend to have a number of co-occurring projects that are meant to help us advance and ultimately achieve our Mission. Managing multiple projects at once, given our limited resources -- time, funding, capacity (i.e. on person can only do so much in a day!) can be challenging -- so we like to make time to review all of our projects and prioritize them. This helps us focus our efforts and resources so that we can continue to make progress while also maintaing balance and preventing staff burnout.  
+The SWAMP Team, and all of the individuals within it, tend to have a number of co-occurring projects that are meant to help us advance and ultimately achieve our Mission. Managing multiple projects at once, given our limited resources -- time, funding, capacity (i.e. on person can only do so much in a day!) can be challenging -- so we like to make time to review all of our projects and prioritize them. This helps us focus our efforts and resources so that we can continue to make progress while also maintaining balance and preventing staff burnout.  
 
-There are a couple of different strategic planning moments that occur: 
+Here are some opportunities to plan & prepare SWAMP projects and activities which serve our mission:  
 
--   **SWAMP Strategic Planning**: Every three years or so, the SWAMP Team reviews and updates the SWAMP Strategic Plan to account for changes in priorities and bandwidth.
+**SWAMP Strategic Planning**: Every three years or so, the SWAMP Team reviews and updates the SWAMP Strategic Plan to account for changes in priorities and bandwidth.
 
--   **Program Work Plans**: Every three years or so, SWAMP Program leads review and update their Program's Work Plans to account for changes in priorities and bandwidth.
+**Program Work Plans**: Every three years or so, SWAMP Program Leads review and update their program's Work Plans to account for changes in priorities and bandwidth.
 
--   **Individual Work Plans**: In December/January of each year, we recommend taking time to update individual work plans to account for changes in priorities and bandwidth. This is also a good time to review and update [Individual Development Plans](https://cawaterboarddatacenter.github.io/swamp-manual/development.html#individual-development-plan-idp), if staff have them!  
+**Individual Work Plans**: In December/January of each year, we recommend taking time to update individual work plans to account for changes in priorities and bandwidth. This is also a good time to review and update [Individual Development Plans](https://cawaterboarddatacenter.github.io/swamp-manual/development.html#individual-development-plan-idp), if staff have them!  
 
 ## Collect and Process
 
-For SWAMP Statewide Monitoring Programs, data collection and processing generally occurs sometime between March and October each year. This timeframe can vary for each Statewide Monitoring Program so it's best to review each Program's Quality Assurance Project Plan (QAPP) for specific sampling and processing timelines.
+For SWAMP Statewide Monitoring Programs, data collection and processing generally occurs sometime between March and October each year. This time frame can vary for each Statewide Monitoring Program so it's best to review each Program's [Quality Assurance Project Plan (QAPP)](https://cawaterboarddatacenter.github.io/swamp-manual/about-swamp.html#swamp-resources) for specific sampling and processing timelines.
 
 The SWAMP Team does so much more than manage and coordinate SWAMP Statewide Monitoring Programs! For those projects, data collection and processing can look very different. Usually it comes in the form of engagement with internal and external partners, listening to the needs of communities that can most benefit from SWAMP data, information, and products, and figuring out how to operationalize and evolve our products and systems to better serve those communities and our partners. This process tends to be ongoing, although there may also be focused and concentrated periods where this listening and learning occurs.
 
@@ -24,7 +24,7 @@ The SWAMP Team does so much more than manage and coordinate SWAMP Statewide Moni
 
 For SWAMP Statewide Monitoring Programs, data analysis and quality assurance and quality control (QAQC) procedures are coordinated by SWAMP IQ, and specific components of the QAQC process can be found on the SWAMP IQ website or in each Program's QAPP.
 
-For SWAMP Projects that are separate from statewide monitoring efforts, we work with our partners to test, "ground truth", and explore the effeacicy of our products and services. This can be separate from or simultaneous to the engagement and learning described in the "Collect and Process" step above. Similarly, this process tends to be ongoing, although there may also be focused and concentrated periods where this listening and learning occurs.
+For SWAMP projects that are separate from statewide monitoring efforts, we work with our partners to test, "ground truth", and explore the efficacy of our products and services. This can be separate from or simultaneous to the engagement and learning described in the "Collect and Process" step above. Similarly, this process tends to be ongoing, although there may also be focused and concentrated periods where this listening and learning occurs.
 
 ## Preserve and Store
 
@@ -36,7 +36,7 @@ Many of the links below require special access or for the user to be securely co
 
 ***Microsoft SharePoint & OneDrive*** 
 
--   Online storage site used for documents that will be shared and edited with people internal to Water Boards -- avoids version control issues
+-   Online storage site used for documents that will be shared and edited with **people internal to Water Boards** -- avoids version control issues
 
 -   [SWAMP SharePoint](https://cawaterboards.sharepoint.com/sites/OIMA/SWAMP/SitePages/Home.aspx), [SWAMP IQ SharePoint](https://cawaterboards.sharepoint.com/sites/OIMA/SWAMP-IQ/SitePages/Home.aspx), [OIMA SharePoint](https://cawaterboards.sharepoint.com/sites/OIMA/SitePages/Home.aspx)
 
@@ -46,7 +46,7 @@ Many of the links below require special access or for the user to be securely co
 
 -   SWAMP IQ: S:\\OIMA\\SHARED\\QA&DM
 
-    -   Used to store core, static materials dated back to SWAMP IQ's start in 2014.
+    -   **Used to store core, static materials** dated back to SWAMP IQ's start in 2014.
 
     -   Archive for old documents and storage for documents we want backed up. 
 
@@ -54,7 +54,7 @@ Many of the links below require special access or for the user to be securely co
 
 -   Online storage site used for documents that will be posted to the SWAMP and SWAMP IQ Wiki pages
 
--   Shared and edited with people external to Water Boards
+-   Shared and edited with **people external to Water Boards**
 
 ***FTP Site***
 
@@ -106,6 +106,6 @@ As we discover new things and/or opportunities to improve the data, products, or
 
 For SWAMP Statewide Monitoring Programs, data are described through metadata and data dictionaries that are available on the SWAMP IQ website, via the database where data are downloaded (e.g. CEDEN, CA Open Data Portal).
 
-For SWAMP Projects that are separate from statewide monitoring efforts, information and context about the project can be found in specific project documentation.
+For SWAMP Projects that are separate from statewide monitoring efforts, information and context about the project can be found in specific project documentation. Examples of documentation we use include GitHub repositories and the tools within them (e.g., ReadMes and GitHub issues), data flow diagrams, and reproducible workflows.
 
 The SWAMP Team is also using this Manual to document the more nuanced parts of how we do what we do so that it's easier for folks to find what they need to do their work.
